--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Project
 
 env
+compiled
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
